update code but error changepassword

--- a/src/main/java/com/coffeemanagementsystem/view/CashierFrame.form
+++ b/src/main/java/com/coffeemanagementsystem/view/CashierFrame.form
@@ -1107,7 +1107,7 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jButton4" min="-2" pref="150" max="-2" attributes="0"/>
+                      <Component id="changePassBtn" min="-2" pref="150" max="-2" attributes="0"/>
                       <Component id="jButton3" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                       <Component id="txtChao" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
                       <Component id="lblClock" alignment="0" min="-2" pref="139" max="-2" attributes="0"/>
@@ -1125,7 +1125,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jButton3" min="-2" pref="31" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jButton4" min="-2" pref="31" max="-2" attributes="0"/>
+                  <Component id="changePassBtn" min="-2" pref="31" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -1161,7 +1161,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton4">
+        <Component class="javax.swing.JButton" name="changePassBtn">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="c" green="cc" red="ff" type="rgb"/>
@@ -1177,7 +1177,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="changePassBtnActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="lblClock">
