update finally code and database

--- a/src/main/java/com/coffeemanagementsystem/view/AdminFrame.form
+++ b/src/main/java/com/coffeemanagementsystem/view/AdminFrame.form
@@ -750,6 +750,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Thu ng&#xe2;n"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rdoThuNganActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JRadioButton" name="rdoNhanVien">
               <Properties>
@@ -762,6 +765,9 @@
                 <Property name="selected" type="boolean" value="true"/>
                 <Property name="text" type="java.lang.String" value="Nh&#xe2;n vi&#xea;n"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rdoNhanVienActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JPasswordField" name="txtMatKhau">
             </Component>
